2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/open.py (_adapt_translations):
	Fix IndexError with m being too large.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/framerate.py (_init_values):
	Use page.project.framerate as the default input value.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/duration-dialog.glade:
	Set sensible adjustments to spin buttons.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/split.py:
	(_shift_destination): Fix shift amount sign.
	(_split_project): Set subtitles to project, not page.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/transform.py:
	Update references to renamed variables and methods.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/subtitle.py (shift_positions):
	Allow negative positions as a result.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py (VIDEO_PLAYER.MPLAYER.command):
	Add -noautosub to load only the specified subtitle file.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/duration.py:
	* gaupol/gtk/dialogs/shift.py:
	* gaupol/gtk/dialogs/transform.py:
	Set sensitivity of the selected rows radio button.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/__init__.py:
	Parse gtkrc file instead of adding it to defaults.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/open.py (_sort):
	* gaupol/calculator.py (compare_times):
	* gaupol/subtitle.py (__cmp__):
	Compare negative times correctly.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py:
	* gaupol/files/microdvd.py:
	* gaupol/files/mpl2.py:
	* gaupol/files/mpsub.py:
	* gaupol/files/ssa.py:
	* gaupol/files/subrip.py:
	* gaupol/files/subviewer2.py:
	* gaupol/files/tmplayer.py:
	Handle reading and writing neagative positions.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/shift.py (_on_preview_button_clicked):